[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/galinha/cima/sprite_2.png" type="Texture" id=1]
[ext_resource path="res://assets/galinha/baixo/sprite_2.png" type="Texture" id=2]
[ext_resource path="res://assets/galinha/baixo/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://assets/galinha/baixo/sprite_0.png" type="Texture" id=4]
[ext_resource path="res://assets/sons/colide.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/galinha/cima/sprite_0.png" type="Texture" id=6]
[ext_resource path="res://assets/galinha/cima/sprite_1.png" type="Texture" id=7]
[ext_resource path="res://scripts/player/player_two.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "down",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 15.6525

[node name="PlayerTwo" type="Area2D"]
script = ExtResource( 8 )
speed = 100

[node name="texture" type="AnimatedSprite" parent="."]
modulate = Color( 0.941176, 0.952941, 0.278431, 1 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "up"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="sfx_collision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
